--- a/styles.css
+++ b/styles.css
@@ -553,7 +553,7 @@ label {
     padding-bottom: 70px;
   }
   
-  input {
+  .foot2 input {
     padding: 10px;
     background-color: #111111;
     border: 0px;
